--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
                 <h1 class="title">
                     バナナ商店
 
-                    
+
 
                 </h1>
                 <h2 class="subtitle">
@@ -30,7 +30,7 @@
             <div class="content">
                 <h1>お店について</h1>
                 <p> 大阪府茨木市にある雑貨屋バナナ商店のページです。ちょっぴり毎日が楽しくなるような雑貨を扱っています。大阪府茨木市に小さな店舗を構えていています。<a href="http://d.hatena.ne.jp/banashow/">はてなダイアリー</a>、<a href="https://www.instagram.com/banana.iro/">Instagram</a>と<a href="https://www.facebook.com/banashow/">Facebook</a>をやっています。是非のぞいてみてください。</p>
-                <!-- LightWidget WIDGET --><script src="http://lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/581d33eb04415b94b3d38258b368a187.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+                <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/581d33eb04415b94b3d38258b368a187.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
                 　　<blockquote>営業時間 11：30　open - 20：00　close（日・祝　17：00 close） 水曜日定休 </blockquote>
                 <p>臨時休業の場合は、<a href="http://d.hatena.ne.jp/banashow/">ブログ</a>でお知らせいたします。</p>
                 <h2>アクセス</h2>
@@ -42,9 +42,9 @@
 
                 <h2>問い合わせ</h2>
                 <p>Tel: 072-648-7910 <p>
-                <p>こちらのフォームから、お問い合わせください。数営業日中に折り返しご連絡差し上げます。</p>
+                <p><a href="https://goo.gl/forms/kMXXikJbvcwBCT4B2">こちらのフォーム</a>から、お問い合わせください。数営業日中に折り返しご連絡差し上げます。</p>
                 <h2>ネットでのご注文について</h2>
-                <p>ブログに掲載の商品について、お問い合わせいただけます。こちらのフォームよりご注文内容をおしらせください。</p>
+                <p>ブログに掲載の商品について、お問い合わせいただけます。<a href="https://goo.gl/forms/L2JBZSEn33sWMLQH2">こちらのフォーム</a>よりご注文内容をおしらせください。</p>
 
             </div>
         </div>
